# s2u03

./: CMakeLists.txt  main.cpp
AbstrakteKlassen/: Betrag.cpp  Betrag.h  Funktion.cpp  Funktion.h  Quadrat.cpp  Quadrat.h  Wurzel.cpp  Wurzel.h
Vererbung/: Adel.cpp  Adel.h  Bauer.cpp  Bauer.h  Einwohner.cpp  Einwohner.h  Kaiser.cpp  Kaiser.h  Leibeigener.cpp  Leibeigener.h
